--- a/PHP_Version/css/style.css
+++ b/PHP_Version/css/style.css
@@ -3,9 +3,11 @@
     padding: 0;
     box-sizing: border-box;
     outline: none;
+    font-family: 'Lato', sans-serif; 
 }
 
 html {
+    min-width: 540px;
     background-color: rgb(19, 19, 19);
 }
 
@@ -24,6 +26,19 @@ header {
 header img {
     height: 50px;
     margin-top: 10px;
+}
+
+.artist_filter {
+    float: right;
+    margin-top: 15px;
+}
+
+.artist_filter select {
+    padding: 10px 0;
+    padding-right: 5px;
+    color: lightgrey;
+    border-radius: 3px;
+    background-color: rgb(44, 43, 43);
 }
 
 .main_container {
